--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -57,7 +57,7 @@
               return d.iTopDisplay == 1 ? '是' : '否';
             }
           },
-          { field: "iShowPriority", title: "展示优先级(1-10 >)", align: "center" },
+          { field: "iShowPriority", title: "展示优先级(1>10)", align: "center" },
           {
             field: "iFlag", title: "状态", align: "center", templet: function (d) {
               var ret = '';
