--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -143,7 +143,7 @@
       $("#zh-CNTitle").val(parent.editdata.sTitle);
       $("select[name='iDisplay']").val(parent.editdata.iDisplay);
       $("select[name='iPopWindow']").val(parent.editdata.iPopWindow);
-      $('#iTopDisplay').val(parent.editdata.iTopDisplay);
+      $("select[name='iTopDisplay']").val(parent.editdata.iTopDisplay);
       $('#iShowPriority').val(parent.editdata.iShowPriority);
 
       zhCNeditor.txt.html(parent.editdata.sHtmlContent);
