--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -88,14 +88,14 @@
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">弹窗显示次数</label>
+        <label class="layui-form-label">弹窗次数</label>
         <div class="layui-input-block">
           <input type="text" name="iPopWindow" id="iPopWindow" autocomplete="off" class="layui-input" lay-verType="tips">
         </div>
       </div>
 
       <div class="layui-form-item" id="iTopDisplay">
-        <label class="layui-form-label">是否置顶显示</label>
+        <label class="layui-form-label">置顶显示</label>
         <div class="layui-input-block">
           <select name="iTopDisplay">
             <option value="0" selected>否</option>
