--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -35,10 +35,10 @@
         toolbar: "#toolbarTpl",
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
-          { field: "id", title: "ID" },
+          { field: "id", title: "ID", align: "center", fixed: "left" },
           { field: "sTitle", title: "标题", align: "center" },
-          { field: "sContent", title: "内容" },
-          { field: "sHtmlContent", title: "html内容" },
+          { field: "sContent", title: "内容", align: "center" },
+          { field: "sHtmlContent", title: "html内容", align: "center" },
           { field: "sBeginTime", title: "开始时间", align: "center" },
           { field: "sEndTime", title: "结束时间", align: "center" },
           {
@@ -57,7 +57,7 @@
               return d.iTopDisplay == 1 ? '是' : '否';
             }
           },
-          { field: "iShowPriority", title: "展示优先级(1>10)", align: "center" },
+          { field: "iShowPriority", title: "展示优先级(1>10)", align: "center", minWidth: "140" },
           {
             field: "iFlag", title: "状态", align: "center", templet: function (d) {
               var ret = '';
