--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -81,14 +81,14 @@
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">弹窗显示次数</label>
+        <label class="layui-form-label">弹窗次数</label>
         <div class="layui-input-block">
           <input type="text" name="iPopWindow" id="iPopWindow" autocomplete="off" class="layui-input" lay-verType="tips">
         </div>
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">是否置顶显示</label>
+        <label class="layui-form-label">置顶显示</label>
         <div class="layui-input-block">
           <select name="iTopDisplay">
             <option value="0">否</option>
@@ -143,7 +143,7 @@
       $("#zh-CNTitle").val(parent.editdata.sTitle);
       $("select[name='iDisplay']").val(parent.editdata.iDisplay);
       $("select[name='iPopWindow']").val(parent.editdata.iPopWindow);
-      $('#iTopDisplay').val(parent.editdata.iTopDisplay);
+      $("select[name='iTopDisplay']").val(parent.editdata.iTopDisplay);
       $('#iShowPriority').val(parent.editdata.iShowPriority);
 
       zhCNeditor.txt.html(parent.editdata.sHtmlContent);
