--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -120,6 +120,8 @@
     </form>
   </div>
   <script src="/lib/layui/layui.js"></script>
+  <script src="/lib/dayjs@1.11.1/dayjs.min.js"></script>
+  <script src="/lib/dayjs@1.11.1/plugin/utc.js"></script>
   <script src="/js/common.js"></script>
   <script>
     zhCNeditor = getDefaultEditor('#zh-CN');
@@ -133,14 +135,13 @@
       let $ = layui.jquery;
       let element = layui.element;
 
+      dayjs.extend(window.dayjs_plugin_utc);
+
       laydate.render({
-        elem: "#iBeginTime", type: "datetime"
+        elem: "#iBeginTime", type: "datetime", format: "yyyy-MM-dd HH:mm:ssZ"
       });
       laydate.render({
-        elem: "#iEndTime", type: "datetime"
-      });
-      laydate.render({
-        elem:"#iPopWindowEndTime", type:"datetime"
+        elem: "#iEndTime", type: "datetime", format: "yyyy-MM-dd HH:mm:ssZ"
       });
 
       zhCNeditor.config.onchange = function (newHtml) {
@@ -165,6 +166,8 @@
         data.field.sTitle = $('#zh-CNTitle').val();
         data.field.sContent = $('#zh-CNHtml').val();
         data.field.sHtmlContent = zhCNeditor.txt.html();
+        data.field.iBeginTime = parseTime(data.field.sBeginTime);
+        data.field.iEndTime = parseTime(data.field.sEndTime);
 
         if (data.field.sTitle == "" || data.field.sContent == "" || data.field.sHtmlContent == "") {
           okLayer.redCrossMsg('默认语言的配置不能为空', function () {});
