--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -138,10 +138,10 @@
       dayjs.extend(window.dayjs_plugin_utc);
 
       laydate.render({
-        elem: "#iBeginTime", type: "datetime", format: "yyyy-MM-dd HH:mm:ssZ"
+        elem: "#iBeginTime", type: "datetime"
       });
       laydate.render({
-        elem: "#iEndTime", type: "datetime", format: "yyyy-MM-dd HH:mm:ssZ"
+        elem: "#iEndTime", type: "datetime"
       });
 
       zhCNeditor.config.onchange = function (newHtml) {
