--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -15,11 +15,19 @@
   </div>
   <!--js逻辑-->
   <script src="/lib/layui/layui.js"></script>
+  <script src="/lib/dayjs@1.11.1/dayjs.min.js"></script>
+  <script src="/lib/dayjs@1.11.1/plugin/utc.js"></script>
+  <script src="/js/common.js"></script>
+
   <script>
-    layui.use(["element", "table", "okLayer", "okUtils"], function () {
+    layui.use(["element", "table", "okLayer", "okUtils", "okCookie"], function () {
       let table = layui.table;
       let okLayer = layui.okLayer;
       let okUtils = layui.okUtils;
+      let $ = layui.jquery;
+
+      dayjs.extend(window.dayjs_plugin_utc);
+
       okLoading.close();
 
       let mailTable = table.render({
@@ -34,7 +42,10 @@
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
           { field: "iMailId", title: "ID" },
-          { field: "sTime", title: "时间" },
+          { field: "iTime", title: "时间" , templet: function (d) {
+              return formatTime(d.iTime, $.cookie("zoneoffset"));
+            }
+          },
           { field: "sFrom", title: "发件人" },
           { field: "sTitle", title: "标题" },
           { field: "sContent", title: "内容" },
