--- a/front/pages/gm/dir-edit.html
+++ b/front/pages/gm/dir-edit.html
@@ -105,16 +105,21 @@
     </form>
   </div>
   <script src="/lib/layui/layui.js"></script>
+  <script src="/lib/dayjs@1.11.1/dayjs.min.js"></script>
+  <script src="/lib/dayjs@1.11.1/plugin/utc.js"></script>
+  <script src="/js/common.js"></script>
   <script>
     // https://www.layui.com/doc/modules/form.html
-    layui.use(['form', 'laydate', 'okUtils', 'okLayer'], function () {
+    layui.use(['form', 'laydate', 'okUtils', 'okLayer', 'okCookie'], function () {
       let form = layui.form;
       let laydate = layui.laydate;
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
       let $ = layui.jquery;
 
-      laydate.render({ elem: "#iPublishTime", type: "datetime", value: parent.zonedata.sPublishTime});
+      dayjs.extend(window.dayjs_plugin_utc);
+
+      laydate.render({ elem: "#iPublishTime", type: "datetime", value: formatTime(parent.zonedata.iPublishTime, $.cookie('zoneoffset'), 'YYYY-MM-DD HH:mm:ss')});
 
 		  okUtils.ajax("/api/gm/channel/list", "get", {page:1, limit: 1000}, false).done(function (response) {
         let channelHtml = '';
@@ -164,6 +169,7 @@
 
       //监听提交
       form.on('submit(add)', function (data) {
+        data.field.iPublishTime = parseTime(data.field.sPublishTime, $.cookie('zoneoffset'));
         okUtils.ajax("/api/gm/zone/update", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
