--- a/front/pages/gm/cdk.html
+++ b/front/pages/gm/cdk.html
@@ -15,13 +15,19 @@
   </div>
   <!--js逻辑-->
   <script src="/lib/layui/layui.js"></script>
+  <script src="/lib/dayjs@1.11.1/dayjs.min.js"></script>
+  <script src="/lib/dayjs@1.11.1/plugin/utc.js"></script>
+  <script src="/js/common.js"></script>
   <script>
     var editCDK;
-    layui.use(["element", "table", "okLayer", "okUtils"], function () {
+    layui.use(["element", "table", "okLayer", "okUtils", "okCookie"], function () {
       let table = layui.table;
       let okLayer = layui.okLayer;
       let okUtils = layui.okUtils;
+      let $ = layui.jquery;
       okLoading.close();
+
+      dayjs.extend(window.dayjs_plugin_utc);
 
       let cdkTable = table.render({
         elem: "#tableId",
@@ -53,9 +59,14 @@
               }
             }
           },
-          { field: "sBeginTime", title: "开始时间", align: "center", width: 170 },
-          { field: "sEndTime", title: "结束时间", align: "center", width: 170 },
-          //{ field: "sCustomLimit", title: "自定义限制", width: 120 },
+          { field: "iBeginTime", title: "开始时间", align: "center", width: 170, templet: function (d) {
+              return formatTime(d.iBeginTime, $.cookie("zoneoffset"));
+            }
+          },
+          { field: "iEndTime", title: "结束时间", align: "center", width: 170, templet: function (d) {
+              return formatTime(d.iEndTime, $.cookie("zoneoffset"));
+            }
+          },
           { field: "sZoneLimit", title: "可用分区", align: "center", width: 90, templet: function (d) {
             if (d.iActive == 1) {
               return '-';
