--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -20,6 +20,9 @@
             <i class="layui-icon layui-icon-shrink-right"></i>
           </a>
         </li>
+        <li class="layui-nav-item">
+          <span id="zoneoffset" style="color:red"></span>
+        </li>
       </ul>
       <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
