--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -209,6 +209,14 @@
 		            title: '清档'
                 , id: 'clear_server'
               },
+              {
+		            title: '备份'
+                , id: 'backup_server'
+              },
+              {
+		            title: '回档'
+                , id: 'restore_server'
+              },
               ]
               , click: function (data2, othis) {
                 if (data2.id == 'copy') {
@@ -219,6 +227,10 @@
                   closeHeartbeat(data);
                 } else if (data2.id == 'clear_server') {
                   clearServer(data);
+                } else if (data2.id == 'backup_server') {
+                  serverOperator(data, 'backup');
+                } else if (data2.id == 'restore_server') {
+                  serverOperator(data, 'restore');
                 }
               }
               ,align: 'right' //右对齐弹出（v2.6.8 新增）
