--- a/front/pages/gm/json.html
+++ b/front/pages/gm/json.html
@@ -487,19 +487,20 @@
           let cb = $('#cb-'+fieldKey.replace('.', '-'))
           if (!cb.is(":checked")) continue;
           let inputName = fieldKey.replace('.', '-')
-          let input = $("input[name='" + inputName + "']").last()
+          let input;
           let fieldValue = '';
 
           let isMap = fieldDesc.type == 'map';
           let isArray = fieldDesc.type == 'array';
           let isGroup = isMap || isArray;
           if (!isGroup) {
+            input = $('#' + inputName)
             fieldValue = this.parseValue(fieldDesc, input.val());
             if (fieldValue == undefined) {
               return undefined;
             }
           } else {
-
+            input = $("input[name='" + inputName + "']").last()
             let group = input.next().next();
 
             let self = this;
@@ -638,6 +639,7 @@
 
       form.on('submit(save)', function(data){
         let fields = editor.getValue();
+        console.log(fields)
         if (fields != undefined) {
        	  parent.layui.$(parent.json_data).val(okUtils.jsonToString(fields));
         }
