--- a/front/pages/gm/json.html
+++ b/front/pages/gm/json.html
@@ -19,6 +19,7 @@
     var config_data;
     var json_data;
     var locked;
+
     layui.use(['form', 'okUtils', 'okLayer', 'laydate'], function () {
       let form = layui.form;
       let okUtils = layui.okUtils;
@@ -97,6 +98,7 @@
         form.render();
       }
       jsonEditor.prototype.createFormItem = function(fieldKey, fieldDesc, fieldValue) {
+
         if (fieldDesc.printer) {
           fieldValue = fieldDesc.printer(fieldValue);
         }
@@ -170,6 +172,7 @@
           cb.prop('checked', true);
         }
       }
+
       jsonEditor.prototype.createGroupInputRow = function(fieldDesc, dataKey, dataVal) {
         let self = this;
         let isMap = fieldDesc.type == 'map' ? true : false;
@@ -478,23 +481,28 @@
       }
       jsonEditor.prototype.getValue = function() {
         let json = {};
+
         for (fieldKey in this.fieldOption) {
           let fieldDesc = this.fieldOption[fieldKey];
           let cb = $('#cb-'+fieldKey.replace('.', '-'))
           if (!cb.is(":checked")) continue;
-          let input = $('#'+fieldKey.replace('.', '-'))
+          let inputName = fieldKey.replace('.', '-')
+          let input;
           let fieldValue = '';
 
           let isMap = fieldDesc.type == 'map';
           let isArray = fieldDesc.type == 'array';
           let isGroup = isMap || isArray;
           if (!isGroup) {
+            input = $('#' + inputName)
             fieldValue = this.parseValue(fieldDesc, input.val());
             if (fieldValue == undefined) {
               return undefined;
             }
           } else {
+            input = $("input[name='" + inputName + "']").last()
             let group = input.next().next();
+
             let self = this;
             fieldValue = isMap ? {} : [];
             let failed = false;
@@ -502,6 +510,7 @@
               if (failed) return;
 
               let ctlGroupRow = $(this);
+
               let mapKey, valEntry;
               $.each(fieldDesc.groupFieldOption, function (grpFieldKey, grpFieldDesc) {
                 if (failed) return;
