--- a/front/pages/gm/dir-version.html
+++ b/front/pages/gm/dir-version.html
@@ -26,9 +26,44 @@
           </div>
         </div>
       </div>
+
+      <div class="layui-form-item">
+        <div class="layui-inline">
+          <label class="layui-form-label">分区标识</label>
+          <div class="layui-input-inline">
+            <select name="iZoneFlag">
+              <option value="1">正常</option>
+              <option value="2">新区</option>
+              <option value="3">关闭</option>
+              <option value="4">审核</option>
+            </select>
+          </div>
+        </div>
+        <div class="layui-inline">
+          <label class="layui-form-label">是否手动</label>
+          <div class="layui-input-inline">
+            <select name="iIsManual">
+              <option value="0">否</option>
+              <option value="1">是</option>
+            </select>
+          </div>
+        </div>
+        <div class="layui-inline">
+          <label class="layui-form-label">手动状态</label>
+          <div class="layui-input-inline">
+            <select name="iManualZoneStatus">
+              <option value="1">流畅</option>
+              <option value="2">忙碌</option>
+              <option value="3">爆满</option>
+              <option value="4">维护</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
       <div class="layui-form-item" id="versionFlag">
         <div class="layui-input-block">
-          <button class="layui-btn" lay-submit lay-filter="add">更新版本号</button>
+          <button class="layui-btn" lay-submit lay-filter="add">更新信息</button>
         </div>
       </div>
     </form>
