--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -21,10 +21,12 @@
       overflow: hidden;
       box-sizing: border-box;
     }
+
     .layui-form-pane .layui-input-block {
       margin-left: 140px;
       left: -1px;
     }
+
   </style>
 </head>
 
@@ -57,32 +59,88 @@
         <div class="layui-input-block">
           <div class="layui-tab layui-tab-brief">
             <ul class="layui-tab-title">
-              <li class="layui-this">简体中文(默认)</li>
+              <li class="layui-this">日语</li>
+              <li>中文</li>
               <li>英语</li>
+              <li>繁中</li>
+              <li>韩语</li>
+              <li>西班牙语</li>
+              <li>意大利语</li>
+              <li>法语</li>
+              <li>德语</li>
             </ul>
             <div class="layui-tab-content">
               <div class="layui-tab-item layui-show">
-                  <div id="zh-CN"></div>
+                <div id="ja"></div>
               </div>
+
               <div class="layui-tab-item">
-                  <div id="en"></div>
+                <div id="zh-CN"></div>
               </div>
+
+              <div class="layui-tab-item">
+                <div id="en"></div>
+              </div>
+
+              <div class="layui-tab-item">
+                <div id="zh-TW"></div>
+              </div>
+
+              <div class="layui-tab-item">
+                <div id="ko"></div>
+              </div>
+
+              <div class="layui-tab-item">
+                <div id="es"></div>
+              </div>
+
+              <div class="layui-tab-item">
+                <div id="it"></div>
+              </div>
+
+              <div class="layui-tab-item">
+                <div id="fr"></div>
+              </div>
+
+              <div class="layui-tab-item">
+                <div id="de"></div>
+              </div>
+
             </div>
           </div>
         </div>
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">默认语言</label>
+        <div class="layui-input-block">
+          <select id="sDefaultLang" name="sDefaultLang">
+            <option value="ja" selected>日语</option>
+            <option value="en">英语</option>
+            <option value="zh-TW">繁中</option>
+            <option value="ko">韩语</option>
+            <option value="es">西班牙语</option>
+            <option value="it">意大利语</option>
+            <option value="fr">法语</option>
+            <option value="de">德语</option>
+            <option value="zh-CN">中文</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <input type="text" name="sBeginTime" id="iBeginTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
+          <input type="text" name="sBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
+            lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
       <div class="layui-form-item">
         <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <input type="text" name="sEndTime" id="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
+          <input type="text" name="sEndTime" id="iEndTime" autocomplete="off" class="layui-input"
+            lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
@@ -99,7 +157,8 @@
       <div class="layui-form-item" id="displayInterval">
         <label class="layui-form-label">显示间隔(秒)</label>
         <div class="layui-input-block">
-          <input type="text" name="iDisplayInterval" class="layui-input" lay-verify="required|integer" lay-verType="tips">
+          <input type="text" name="iDisplayInterval" class="layui-input" lay-verify="required|integer"
+            lay-verType="tips">
         </div>
       </div>
 
@@ -113,7 +172,8 @@
       <div class="layui-form-item layui-hide" id="maintenanceTime">
         <label class="layui-form-label">维护时间(分钟)</label>
         <div class="layui-input-block">
-          <input type="text" name="iMaintenanceTime" class="layui-input" lay-verify="required|integer" lay-verType="tips">
+          <input type="text" name="iMaintenanceTime" class="layui-input" lay-verify="required|integer"
+            lay-verType="tips">
         </div>
       </div>
 
@@ -129,8 +189,27 @@
   <script src="/js/common.js"></script>
   <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
   <script>
-    zhCNeditor = getDefaultEditor('#zh-CN');
-    ENeditor = getDefaultEditor('#en');
+    zh_CNEditor = getDefaultEditor('#zh-CN');
+    enEditor = getDefaultEditor('#en');
+    jaEditor = getDefaultEditor('#ja');
+    zh_TWEditor = getDefaultEditor('#zh-TW');
+    koEditor = getDefaultEditor('#ko');
+    esEditor = getDefaultEditor('#es');
+    itEditor = getDefaultEditor('#it');
+    frEditor = getDefaultEditor('#fr');
+    deEditor = getDefaultEditor('#de');
+
+    function getLangEditor(lang) {
+      if (lang == "en") return enEditor;
+      else if (lang == "ja") return jaEditor;
+      else if (lang == "zh-TW") return zh_TWEditor;
+      else if (lang == "ko") return koEditor;
+      else if (lang == "es") return esEditor;
+      else if (lang == "it") return itEditor;
+      else if (lang == "fr") return frEditor;
+      else if (lang == "de") return deEditor;
+      else return zh_CNEditor;
+    }
 
     layui.use(['form', 'laydate', 'okLayer', 'okUtils', 'element'], function () {
       let form = layui.form;
@@ -168,33 +247,33 @@
           }
         },
         toolbar: {
-            show: true,
+          show: true,
         },
-        on: function(data){
+        on: function (data) {
           //arr:  当前多选已选中的数据
           let arr = data.arr;
           //change, 此次选择变化的数据,数组
           let change = data.change;
           //isAdd, 此次操作是新增还是删除
           let isAdd = data.isAdd;
-          if(isAdd){
-            var allItem = change.find(function(item){
+          if (isAdd) {
+            var allItem = change.find(function (item) {
               return item.iZoneId === 99999;
             })
-            if(allItem){
+            if (allItem) {
               return [allItem];
             }
-            allItem = arr.find(function(item){
+            allItem = arr.find(function (item) {
               return item.iZoneId === 99999;
             })
-            if(allItem){
+            if (allItem) {
               return change;
             }
           }
         },
       });
 
-      okUtils.ajax("/api/gm/zone/simplelist", "get", {game: true, all: true}, false).done(function (response) {
+      okUtils.ajax("/api/gm/zone/simplelist", "get", { game: true, all: true }, false).done(function (response) {
         zoneSelect.update({
           data: response.data["game"],
         });
@@ -238,25 +317,32 @@
           data.field.zoneid = '';
         }
         if (data.field.sBeginTime >= data.field.sEndTime) {
-          okLayer.redCrossMsg('开始时间不能大于结束时间', function () {});
+          okLayer.redCrossMsg('开始时间不能大于结束时间', function () { });
           return false;
         }
 
         if (data.field.iType != 2) {
-          data.field.sContent = ExecuteJsonData(zhCNeditor.txt.getJSON());
-          data.field.sHtmlContent = zhCNeditor.txt.html();
-
+          let mLang = {};
+          let langs = ["en", "zh-CN", "ja", "zh-TW", "ko", "es", "it", "fr", "de"];
+          for (let i = 0; i < langs.length; ++i) {
+            let lang = langs[i];
+            let editor = getLangEditor(lang);
+            if (lang == $('#sDefaultLang').val()) {
+              data.field.sContent = ExecuteJsonData(editor.txt.getJSON());
+              data.field.sHtmlContent = editor.txt.html();
+            } else {
+              mLang[lang] = { "sContent": ExecuteJsonData(editor.txt.getJSON()), "sHtmlContent": editor.txt.html() };
+            }
+          }
           if (data.field.sHtmlContent == '') {
-            okLayer.redCrossMsg('公告内容不能为空', function () {});
+            okLayer.redCrossMsg('公告内容不能为空', function () { });
             return false;
           }
 
-          let lang = {};
-          lang["en"] = {"sContent":ExecuteJsonData(ENeditor.txt.getJSON()),"sHtmlContent":ENeditor.txt.html()};
-          data.field.sLangContent = okUtils.jsonToString(lang);
+          data.field.sLangContent = okUtils.jsonToString(mLang);
 
           if (!checkLang(lang)) {
-            okLayer.confirm('除了默认语言还有语言未填,是否继续提交?', function(index) {
+            okLayer.confirm('除了默认语言还有语言未填,是否继续提交?', function (index) {
               okUtils.ajax("/api/gm/notice/add", "post", data.field, true).done(function (response) {
                 okLayer.greenTickMsg(response.data, function () {
                   parent.layer.close(parent.layer.getFrameIndex(window.name));
