--- a/front/pages/gm/mail-add2.html
+++ b/front/pages/gm/mail-add2.html
@@ -321,7 +321,7 @@
         let iRoleId = $('input[name="iRoleId"]').val();
         let param = { sTitle: defTitle, sContent: defContent, sLangContent: sLangContent, iZoneId: iZoneId, iRoleId: iRoleId };
 
-        return { 'p': param, 'lang': lang };
+        return { 'p': param, 'lang': mLang };
       }
 
       function cmpParam(old, n) {
